fix: set grid-container gap on mobile

--- a/style.css
+++ b/style.css
@@ -26,11 +26,15 @@ footer {
   border: 1px solid rgba(0, 0, 0, 0.25);
 }
 
+grid-container {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 1rem;
+}
+
 @media only screen and (min-width: 768px) {
   grid-container {
-    display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 1rem;
   }
 }
 
